styles/global.css
html,
body {
    padding: 0;
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
    line-height: 1.6;
    font-size: 18px;
}

* {
    box-sizing: border-box;
}

a {
    color: #0070f3;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

img {
    max-width: 100%;
    display: block;
}


@keyframes traceTransparencyA {
    0% {
        stroke-opacity: 0;
        stroke-width: 1;
    }
    60% {
        stroke-opacity: 0.5;
        stroke-width: 1;
    }
    70% {
        stroke-opacity: 1;
        stroke-width: 3;
    }
    80% {
        stroke-opacity: 0;
        stroke-width: 1;
    }
    90% {
        stroke-opacity: 1;
        stroke-width: 5;
    }
    100% {
        stroke-width: 1;
        stroke-opacity: 0.1;
    }
}

@keyframes traceTransparencyB {
    0% {
        stroke-opacity: 0;
        stroke-width: 1;
    }
    60% {
        stroke-opacity: 0.5;
        stroke-width: 1;
    }
    70% {
        stroke-opacity: 1;
        stroke-width: 5;
    }
    80% {
        stroke-opacity: 0;
        stroke-width: 1;
    }
    90% {
        stroke-opacity: 1;
        stroke-width: 8;
    }
    100% {
        stroke-width: 1;
        stroke-opacity: 0.1;
    }
}

.flashingTrace.flashingTraceB {
    animation-name: traceTransparencyB;
    animation-duration: 2s;
}

.flashingTrace.flashingTraceA {
    animation-name: traceTransparencyA;
    animation-duration: 3s;
}

.flashingTrace {
    stroke-width: 1;
    stroke-opacity: 0.2;
    /*animation-name: traceTransparency;*/
    /*!*animation-duration: 5s;*!*/
    /*animation-iteration-count: infinite;*/
    transform: translateZ(0); /* force GPX to reduce CPU usage */
    /*animation-direction: alternate;*/
}

.flashingTrace {
    stroke-width: 1;
    stroke-opacity: 0.2;
    /*animation-name: traceTransparency;*/
    /*!*animation-duration: 5s;*!*/
    /*animation-iteration-count: infinite;*/
    transform: translateZ(0); /* force GPX to reduce CPU usage */
    /*animation-direction: alternate;*/
}


@keyframes flashSelected {
    0% {
    }
    10% {
        stroke-opacity: 1;
    }
    20% {
        stroke-opacity: 0.2;
    }
    30% {
        stroke-opacity: 1;
    }
    40% {
        stroke-opacity: 0.2;
    }
    100% {
        stroke-opacity: 1;
    }
}

path.selectedTrace {
    stroke-width: 4;
    stroke-opacity: 1;
    animation-name: flashSelected;
    animation-duration: 1s;
}

path.notTheSelectedTrace {
    stroke-opacity: 0.5;
}

